Cambios en el proyecto * Se agregó el directorio public/ a .gitignore * Se modificó el archivo gulpfile.js * Se modificó el archivo package.json * Cambios en los archivos del directorio src/

--- a/src/pug/config/config.pug
+++ b/src/pug/config/config.pug
@@ -1,22 +1,22 @@
 -
   var softwares = [
     {
-      img:'img/manjaro-linux.png',
+      img:'assets/img/manjaro-linux.png',
       name:'Manjaro linux',
       url: 'article.html'
     },
     {
-      img:'img/firefox-quantum.jpg',
+      img:'assets/img/firefox-quantum.jpg',
       name:'Firefox Quantum',
       url: 'article.html'
     },
     {
-      img:'img/ubuntu.jpeg',
+      img:'assets/img/ubuntu.jpeg',
       name:'Ubuntu 18.04',
       url: 'article.html'
     },
     {
-      img:'img/code.jpg',
+      img:'assets/img/code.jpg',
       name:'Visual Studio Code',
       url: 'article.html'
     },
@@ -25,42 +25,42 @@
 -
   var freeSoftwares = [
     {
-      img:'img/emacs.jpg',
+      img:'assets/img/emacs.jpg',
       name:'Emacs',
       url: 'article.html'
     },
     {
-      img:'img/vim.png',
+      img:'assets/img/vim.png',
       name:'Vim',
       url: 'article.html'
     },
     {
-      img:'img/trisquel.jpg',
+      img:'assets/img/trisquel.jpg',
       name:'Trisquel GNU/Linux',
       url: 'article.html'
     },
     {
-      img:'img/pureos.png',
+      img:'assets/img/pureos.png',
       name:'Pure OS',
       url: 'article.html'
     },
     {
-      img:'img/libreoffice.png',
+      img:'assets/img/libreoffice.png',
       name:'LibreOffice',
       url: 'article.html'
     },
     {
-      img:'img/gimp.jpg',
+      img:'assets/img/gimp.jpg',
       name:'GIMP',
       url: 'article.html'
     },
     {
-      img:'img/geany.png',
+      img:'assets/img/geany.png',
       name:'Geany',
       url: 'article.html'
     },
     {
-      img:'img/nano.png',
+      img:'assets/img/nano.png',
       name:'Nano',
       url: 'article.html'
     },
@@ -69,42 +69,42 @@
 -
   var openSources = [
     {
-      img:'img/ubuntu.jpeg',
+      img:'assets/img/ubuntu.jpeg',
       name:'Visual Studio Code',
       url: 'article.html'
     },
     {
-      img:'img/firefox-quantum.jpg',
+      img:'assets/img/firefox-quantum.jpg',
       name:'Firefox',
       url: 'article.html'
     },
     {
-      img:'img/manjaro-linux.png',
+      img:'assets/img/manjaro-linux.png',
       name:'Manjaro Linux',
       url: 'article.html'
     },
     {
-      img:'img/vlc.png',
+      img:'assets/img/vlc.png',
       name:'VLC media player',
       url: 'article.html'
     },
     {
-      img:'img/open-office.jpg',
+      img:'assets/img/open-office.jpg',
       name:'Apache Open Office',
       url: 'article.html'
     },
     {
-      img:'img/atom.png',
+      img:'assets/img/atom.png',
       name:'Atom',
       url: 'article.html'
     },
     {
-      img:'img/netbeans.jpg',
+      img:'assets/img/netbeans.jpg',
       name:'Netbeans',
       url: 'article.html'
     },
     {
-      img:'img/chromium.png',
+      img:'assets/img/chromium.png',
       name:'Google Chromium',
       url: 'article.html'
     },
