--- a/src/pug/nosotros.pug
+++ b/src/pug/nosotros.pug
@@ -4,5 +4,5 @@ block content
   .main-content
     h2 Nosotros
     .content
-      img(src="img/team.jpg", alt="Team").content__img
+      img(src="assets/img/team.jpg", alt="Team").content__img
       p Lorem ipsum dolor, sit amet consectetur adipisicing elit. Totam fugit, debitis rem dolorem ipsam amet laboriosam enim sequi eum nostrum deserunt beatae facilis eveniet corporis quam quibusdam quo voluptatum ipsa! Molestiae facere quas ut veniam, illum doloremque officia id nesciunt repudiandae sed eius neque perferendis esse alias molestias, beatae aliquam eveniet
