--- a/src/pug/template/template.pug
+++ b/src/pug/template/template.pug
@@ -3,8 +3,8 @@ html(lang="es")
   head
     meta(charset="UTF-8")
     meta(name="viewport", content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0")
-    link(rel="stylesheet", href="css/icons.css")
     link(rel="stylesheet", href="css/style.css")
+    link(href="https://fonts.googleapis.com/css?family=Lato|Oswald:300,400&display=swap", rel="stylesheet")
     title Plataforma web Open Source
   body#body
 
