--- a/src/scss/modules/icons.scss
+++ b/src/scss/modules/icons.scss
@@ -2,11 +2,11 @@
 
 @font-face {
   font-family: "tc";
-  src:url("../fonts/tc.eot");
-  src:url("../fonts/tc.eot?#iefix") format("embedded-opentype"),
-    url("../fonts/tc.woff") format("woff"),
-    url("../fonts/tc.ttf") format("truetype"),
-    url("../fonts/tc.svg#tc") format("svg");
+  src:url("../assets/fonts/tc.eot");
+  src:url("../assets/fonts/tc.eot?#iefix") format("embedded-opentype"),
+    url("../assets/fonts/tc.woff") format("woff"),
+    url("../assets/fonts/tc.ttf") format("truetype"),
+    url("../assets/fonts/tc.svg#tc") format("svg");
   font-weight: normal;
   font-style: normal;
 
