--- a/src/pug/article.pug
+++ b/src/pug/article.pug
@@ -5,7 +5,7 @@ block content
 
   .article-container
     .article.flexbox
-      img(src="img/code.jpg", alt="Software").article__img
+      img(src="assets/img/code.jpg", alt="Software").article__img
       .article__content
         h3 Visual Studio Code
         p Visual Studio Code is a code editor redefined and optimized for building and debugging modern web and cloud applications.  Visual Studio Code is free and available on your favorite platform - Linux, macOS, and Windows.
@@ -14,10 +14,10 @@ block content
         p categoria:
           a(href="#").category Editor de código
     .galery
-      img(src="img/code.jpg", alt="").galery__img
-      img(src="img/code.jpg", alt="").galery__img
-      img(src="img/code.jpg", alt="").galery__img
-      img(src="img/code.jpg", alt="").galery__img
+      img(src="assets/img/code.jpg", alt="").galery__img
+      img(src="assets/img/code.jpg", alt="").galery__img
+      img(src="assets/img/code.jpg", alt="").galery__img
+      img(src="assets/img/code.jpg", alt="").galery__img
 
   .tabs-comtainer
     ul.tabs#tabs
