--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -2,7 +2,7 @@ extends template/template
 
 block banner
   .banner
-    img(src="img/banner.jpg", alt="Banner").banner__img
+    img(src="assets/img/banner.jpg", alt="Banner").banner__img
     .banner__content
       h3.mark Plataforma web educativa
       p.banner__content__paragraph Software Libre y Open Source
