--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -33,7 +33,6 @@ $breakpoints: (
 }
 
 // Imports
-@import url('https://fonts.googleapis.com/css?family=Lato:300,400|Oswald:300,400');
 @import 'base/base';
 @import 'layout/article';
 @import 'layout/banner';
@@ -43,6 +42,7 @@ $breakpoints: (
 @import 'layout/header';
 @import 'modules/buttons';
 @import 'modules/menu';
+@import 'modules/icons';
 @import 'modules/modules';
 @import 'states/state';
 @import 'theme/theme';
