Cambios en el directorio src/pug/ * Se creo un directorio por cada pagina * Se modifico las rutas a los archivos partials pug y los archivos estaticos

--- a/src/pug/blocks/menu.pug
+++ b/src/pug/blocks/menu.pug
@@ -2,10 +2,10 @@
 nav#nav.main-nav
     ul.main-menu
       li.main-menu__item
-        a(href="index.html").main-menu__link Inicio
+        a(href="/").main-menu__link Inicio
       li.main-menu__item
-        a(href="nosotros.html").main-menu__link Nosotros
+        a(href="/nosotros/").main-menu__link Nosotros
       li.main-menu__item
-        a(href="software-libre.html").main-menu__link Software Libre
+        a(href="/free-software/").main-menu__link Software Libre
       li.main-menu__item
-        a(href="open-source.html").main-menu__link Open Source
+        a(href="/open-source/").main-menu__link Open Source
