--- a/src/pug/config/config.pug
+++ b/src/pug/config/config.pug
@@ -1,111 +1,111 @@
 -
   var softwares = [
     {
-      img:'assets/img/manjaro-linux.png',
+      img:'../assets/img/manjaro-linux.png',
       name:'Manjaro linux',
-      url: 'article.html'
+      url: 'article/'
     },
     {
-      img:'assets/img/firefox-quantum.jpg',
+      img:'../assets/img/firefox-quantum.jpg',
       name:'Firefox Quantum',
-      url: 'article.html'
+      url: 'article/'
     },
     {
-      img:'assets/img/ubuntu.jpeg',
+      img:'../assets/img/ubuntu.jpeg',
       name:'Ubuntu 18.04',
-      url: 'article.html'
+      url: 'article/'
     },
     {
-      img:'assets/img/code.jpg',
+      img:'../assets/img/code.jpg',
       name:'Visual Studio Code',
-      url: 'article.html'
+      url: 'article/'
     },
   ];
 
 -
   var freeSoftwares = [
     {
-      img:'assets/img/emacs.jpg',
+      img:'../assets/img/emacs.jpg',
       name:'Emacs',
-      url: 'article.html'
+      url: 'article/'
     },
     {
-      img:'assets/img/vim.png',
+      img:'../assets/img/vim.png',
       name:'Vim',
-      url: 'article.html'
+      url: 'article/'
     },
     {
-      img:'assets/img/trisquel.jpg',
+      img:'../assets/img/trisquel.jpg',
       name:'Trisquel GNU/Linux',
-      url: 'article.html'
+      url: 'article/'
     },
     {
-      img:'assets/img/pureos.png',
+      img:'../assets/img/pureos.png',
       name:'Pure OS',
-      url: 'article.html'
+      url: 'article/'
     },
     {
-      img:'assets/img/libreoffice.png',
+      img:'../assets/img/libreoffice.png',
       name:'LibreOffice',
-      url: 'article.html'
+      url: 'article/'
     },
     {
-      img:'assets/img/gimp.jpg',
+      img:'../assets/img/gimp.jpg',
       name:'GIMP',
-      url: 'article.html'
+      url: 'article/'
     },
     {
-      img:'assets/img/geany.png',
+      img:'../assets/img/geany.png',
       name:'Geany',
-      url: 'article.html'
+      url: 'article/'
     },
     {
-      img:'assets/img/nano.png',
+      img:'../assets/img/nano.png',
       name:'Nano',
-      url: 'article.html'
+      url: 'article/'
     },
   ];
 
 -
   var openSources = [
     {
-      img:'assets/img/ubuntu.jpeg',
+      img:'../assets/img/ubuntu.jpeg',
       name:'Visual Studio Code',
-      url: 'article.html'
+      url: 'article/'
     },
     {
-      img:'assets/img/firefox-quantum.jpg',
+      img:'../assets/img/firefox-quantum.jpg',
       name:'Firefox',
-      url: 'article.html'
+      url: 'article/'
     },
     {
-      img:'assets/img/manjaro-linux.png',
+      img:'../assets/img/manjaro-linux.png',
       name:'Manjaro Linux',
-      url: 'article.html'
+      url: 'article/'
     },
     {
-      img:'assets/img/vlc.png',
+      img:'../assets/img/vlc.png',
       name:'VLC media player',
-      url: 'article.html'
+      url: 'article/'
     },
     {
-      img:'assets/img/open-office.jpg',
+      img:'../assets/img/open-office.jpg',
       name:'Apache Open Office',
-      url: 'article.html'
+      url: 'article/'
     },
     {
-      img:'assets/img/atom.png',
+      img:'../assets/img/atom.png',
       name:'Atom',
-      url: 'article.html'
+      url: 'article/'
     },
     {
-      img:'assets/img/netbeans.jpg',
+      img:'../assets/img/netbeans.jpg',
       name:'Netbeans',
-      url: 'article.html'
+      url: 'article/'
     },
     {
-      img:'assets/img/chromium.png',
+      img:'../assets/img/chromium.png',
       name:'Google Chromium',
-      url: 'article.html'
+      url: 'article/'
     },
   ];
