--- a/src/pug/pages/free-software/index.pug
+++ b/src/pug/pages/free-software/index.pug
@@ -1,8 +1,8 @@
-extends template/template
+extends ../../template/template
 
 block content
   h2 Software Libre
-  include config/config
+  include ../../config/config
     each freeSoftware in freeSoftwares
       .software
         img(src=freeSoftware.img, alt=freeSoftware.name).software__img
