--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -1,16 +1,16 @@
-extends template/template
+extends ../template/template
 
 block banner
   .banner
-    img(src="assets/img/banner.jpg", alt="Banner").banner__img
+    img(src="/assets/img/banner.jpg", alt="Banner").banner__img
     .banner__content
       h3.mark Plataforma web educativa
       p.banner__content__paragraph Software Libre y Open Source
-      a(href="nosotros.html").button.primary Ver más
+      a(href="/nosotros/").button.primary Ver más
 
 block content
   h2 Software Libre y Open Source
-  include config/config
+  include ../config/config
     each software in softwares
       .software
         img(src=software.img, alt=software.name)
