--- a/src/pug/pages/open-source/index.pug
+++ b/src/pug/pages/open-source/index.pug
@@ -1,8 +1,8 @@
-extends template/template
+extends ../../template/template
 
 block content
   h2 Open Source
-  include config/config
+  include ../../config/config
     each openSource in openSources
       .software
         img(src=openSource.img, alt=openSource.name).software__img
