--- a/src/pug/config/config.pug
+++ b/src/pug/config/config.pug
@@ -3,22 +3,22 @@
     {
       img:'../assets/img/manjaro-linux.png',
       name:'Manjaro linux',
-      url: 'article/'
+      url: `${path}article/`
     },
     {
       img:'../assets/img/firefox-quantum.jpg',
       name:'Firefox Quantum',
-      url: 'article/'
+      url: `${path}article/`
     },
     {
       img:'../assets/img/ubuntu.jpeg',
       name:'Ubuntu 18.04',
-      url: 'article/'
+      url: `${path}article/`
     },
     {
       img:'../assets/img/code.jpg',
       name:'Visual Studio Code',
-      url: 'article/'
+      url: `${path}article/`
     },
   ];
 
@@ -27,42 +27,42 @@
     {
       img:'../assets/img/emacs.jpg',
       name:'Emacs',
-      url: 'article/'
+      url: `${path}article/`
     },
     {
       img:'../assets/img/vim.png',
       name:'Vim',
-      url: 'article/'
+      url: `${path}article/`
     },
     {
       img:'../assets/img/trisquel.jpg',
       name:'Trisquel GNU/Linux',
-      url: 'article/'
+      url: `${path}article/`
     },
     {
       img:'../assets/img/pureos.png',
       name:'Pure OS',
-      url: 'article/'
+      url: `${path}article/`
     },
     {
       img:'../assets/img/libreoffice.png',
       name:'LibreOffice',
-      url: 'article/'
+      url: `${path}article/`
     },
     {
       img:'../assets/img/gimp.jpg',
       name:'GIMP',
-      url: 'article/'
+      url: `${path}article/`
     },
     {
       img:'../assets/img/geany.png',
       name:'Geany',
-      url: 'article/'
+      url: `${path}article/`
     },
     {
       img:'../assets/img/nano.png',
       name:'Nano',
-      url: 'article/'
+      url: `${path}article/`
     },
   ];
 
@@ -71,41 +71,41 @@
     {
       img:'../assets/img/ubuntu.jpeg',
       name:'Visual Studio Code',
-      url: 'article/'
+      url: `${path}article/`
     },
     {
       img:'../assets/img/firefox-quantum.jpg',
       name:'Firefox',
-      url: 'article/'
+      url: `${path}article/`
     },
     {
       img:'../assets/img/manjaro-linux.png',
       name:'Manjaro Linux',
-      url: 'article/'
+      url: `${path}article/`
     },
     {
       img:'../assets/img/vlc.png',
       name:'VLC media player',
-      url: 'article/'
+      url: `${path}article/`
     },
     {
       img:'../assets/img/open-office.jpg',
       name:'Apache Open Office',
-      url: 'article/'
+      url: `${path}article/`
     },
     {
       img:'../assets/img/atom.png',
       name:'Atom',
-      url: 'article/'
+      url: `${path}article/`
     },
     {
       img:'../assets/img/netbeans.jpg',
       name:'Netbeans',
-      url: 'article/'
+      url: `${path}article/`
     },
     {
       img:'../assets/img/chromium.png',
       name:'Google Chromium',
-      url: 'article/'
+      url: `${path}article/`
     },
   ];
