Cambios en el archivo config.pug del directorio src/pug/config/

--- a/src/pug/config/config.pug
+++ b/src/pug/config/config.pug
@@ -1,23 +1,23 @@
 -
   var softwares = [
     {
-      img:'../assets/img/manjaro-linux.png',
-      name:'Manjaro linux',
+      img:`${path}assets/img/manjaro-linux.png`,
+      name:`Manjaro linux`,
       url: `${path}article/`
     },
     {
-      img:'../assets/img/firefox-quantum.jpg',
-      name:'Firefox Quantum',
+      img:`${path}assets/img/firefox-quantum.jpg`,
+      name:`Firefox Quantum`,
       url: `${path}article/`
     },
     {
-      img:'../assets/img/ubuntu.jpeg',
-      name:'Ubuntu 18.04',
+      img:`${path}assets/img/ubuntu.jpeg`,
+      name:`Ubuntu 18.04`,
       url: `${path}article/`
     },
     {
-      img:'../assets/img/code.jpg',
-      name:'Visual Studio Code',
+      img:`${path}assets/img/code.jpg`,
+      name:`Visual Studio Code`,
       url: `${path}article/`
     },
   ];
@@ -25,43 +25,43 @@
 -
   var freeSoftwares = [
     {
-      img:'../assets/img/emacs.jpg',
-      name:'Emacs',
+      img:`${path}assets/img/emacs.jpg`,
+      name:`Emacs`,
       url: `${path}article/`
     },
     {
-      img:'../assets/img/vim.png',
-      name:'Vim',
+      img:`${path}assets/img/vim.png`,
+      name:`Vim`,
       url: `${path}article/`
     },
     {
-      img:'../assets/img/trisquel.jpg',
-      name:'Trisquel GNU/Linux',
+      img:`${path}assets/img/trisquel.jpg`,
+      name:`Trisquel GNU/Linux`,
       url: `${path}article/`
     },
     {
-      img:'../assets/img/pureos.png',
-      name:'Pure OS',
+      img:`${path}assets/img/pureos.png`,
+      name:`Pure OS`,
       url: `${path}article/`
     },
     {
-      img:'../assets/img/libreoffice.png',
-      name:'LibreOffice',
+      img:`${path}assets/img/libreoffice.png`,
+      name:`LibreOffice`,
       url: `${path}article/`
     },
     {
-      img:'../assets/img/gimp.jpg',
-      name:'GIMP',
+      img:`${path}assets/img/gimp.jpg`,
+      name:`GIMP`,
       url: `${path}article/`
     },
     {
-      img:'../assets/img/geany.png',
-      name:'Geany',
+      img:`${path}assets/img/geany.png`,
+      name:`Geany`,
       url: `${path}article/`
     },
     {
-      img:'../assets/img/nano.png',
-      name:'Nano',
+      img:`${path}assets/img/nano.png`,
+      name:`Nano`,
       url: `${path}article/`
     },
   ];
@@ -69,43 +69,43 @@
 -
   var openSources = [
     {
-      img:'../assets/img/ubuntu.jpeg',
-      name:'Visual Studio Code',
+      img:`${path}assets/img/ubuntu.jpeg`,
+      name:`Visual Studio Code`,
       url: `${path}article/`
     },
     {
-      img:'../assets/img/firefox-quantum.jpg',
-      name:'Firefox',
+      img:`${path}assets/img/firefox-quantum.jpg`,
+      name:`Firefox`,
       url: `${path}article/`
     },
     {
-      img:'../assets/img/manjaro-linux.png',
-      name:'Manjaro Linux',
+      img:`${path}assets/img/manjaro-linux.png`,
+      name:`Manjaro Linux`,
       url: `${path}article/`
     },
     {
-      img:'../assets/img/vlc.png',
-      name:'VLC media player',
+      img:`${path}assets/img/vlc.png`,
+      name:`VLC media player`,
       url: `${path}article/`
     },
     {
-      img:'../assets/img/open-office.jpg',
-      name:'Apache Open Office',
+      img:`${path}assets/img/open-office.jpg`,
+      name:`Apache Open Office`,
       url: `${path}article/`
     },
     {
-      img:'../assets/img/atom.png',
-      name:'Atom',
+      img:`${path}assets/img/atom.png`,
+      name:`Atom`,
       url: `${path}article/`
     },
     {
-      img:'../assets/img/netbeans.jpg',
-      name:'Netbeans',
+      img:`${path}assets/img/netbeans.jpg`,
+      name:`Netbeans`,
       url: `${path}article/`
     },
     {
-      img:'../assets/img/chromium.png',
-      name:'Google Chromium',
+      img:`${path}assets/img/chromium.png`,
+      name:`Google Chromium`,
       url: `${path}article/`
     },
   ];
